refactor: move hyperparameters to YAML config and improve training script flexibility

--- a/requirements.txt
+++ b/requirements.txt
@@ -65,6 +65,7 @@ PyOpenGL==3.1.9
 pyparsing==3.2.1
 python-dateutil==2.9.0.post0
 pytz==2025.1
+PyYAML==6.0.2
 pyzmq==26.2.1
 referencing==0.36.2
 requests==2.32.3
