--- a/requirements.txt
+++ b/requirements.txt
@@ -15,7 +15,7 @@ defusedxml==0.7.1
 docopt==0.6.2
 etils==1.11.0
 executing==2.2.0
-Farama-Notifications==0.0.4
+farama-notifications==0.0.4
 fastjsonschema==2.21.1
 filelock==3.17.0
 fonttools==4.55.8
@@ -25,21 +25,23 @@ grpcio==1.70.0
 gymnasium==1.0.0
 idna==3.10
 imageio==2.37.0
-importlib_resources==6.5.2
+imageio-ffmpeg==0.6.0
+importlib-resources==6.5.2
 ipython==8.12.3
 jedi==0.19.2
-Jinja2==3.1.5
+jinja2==3.1.5
 jsonschema==4.23.0
 jsonschema-specifications==2024.10.1
-jupyter_client==8.6.3
-jupyter_core==5.7.2
-jupyterlab_pygments==0.3.0
+jupyter-client==8.6.3
+jupyter-core==5.7.2
+jupyterlab-pygments==0.3.0
 kiwisolver==1.4.8
-Markdown==3.7
-MarkupSafe==3.0.2
+markdown==3.7
+markupsafe==3.0.2
 matplotlib==3.10.0
 matplotlib-inline==0.1.7
 mistune==3.1.1
+moviepy==2.1.2
 mpmath==1.3.0
 mujoco==3.2.7
 nbclient==0.10.2
@@ -47,6 +49,7 @@ nbconvert==7.16.6
 nbformat==5.10.4
 networkx==3.4.2
 numpy==2.2.2
+opencv-python==4.11.0.86
 packaging==24.2
 pandas==2.2.3
 pandocfilters==1.5.1
@@ -54,18 +57,21 @@ parso==0.8.4
 pettingzoo==1.24.3
 pexpect==4.9.0
 pickleshare==0.7.5
-pillow==11.1.0
+pillow==10.4.0
+pip==25.0
 platformdirs==4.3.6
-prompt_toolkit==3.0.50
+proglog==0.1.10
+prompt-toolkit==3.0.50
 protobuf==5.29.3
 ptyprocess==0.7.0
-pure_eval==0.2.3
-Pygments==2.19.1
-PyOpenGL==3.1.9
+pure-eval==0.2.3
+pygments==2.19.1
+pyopengl==3.1.9
 pyparsing==3.2.1
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 pytz==2025.1
-PyYAML==6.0.2
+pyyaml==6.0.2
 pyzmq==26.2.1
 referencing==0.36.2
 requests==2.32.3
@@ -73,7 +79,7 @@ rpds-py==0.22.3
 setuptools==75.8.0
 six==1.17.0
 soupsieve==2.6
-stable_baselines3==2.5.0
+stable-baselines3==2.5.0
 stack-data==0.6.3
 sympy==1.13.1
 tensorboard==2.18.0
@@ -81,12 +87,13 @@ tensorboard-data-server==0.7.2
 tinycss2==1.4.0
 torch==2.6.0
 tornado==6.4.2
+tqdm==4.67.1
 traitlets==5.14.3
-typing_extensions==4.12.2
+typing-extensions==4.12.2
 tzdata==2025.1
 urllib3==2.3.0
 wcwidth==0.2.13
 webencodings==0.5.1
-Werkzeug==3.1.3
+werkzeug==3.1.3
 yarg==0.1.9
 zipp==3.21.0
